--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 
 <!-- Elemento que contém o conteúdo visível da página -->
 <body>
-
     <div class="container-fluid px-0 mx-0 main_section">
         <!-- Cria um contêiner fluido sem padding horizontal e com largura completa para a seção principal -->
 
@@ -158,7 +157,7 @@
                             </div>
                         </div>
                         <div id="pdf-container">
-                            <button onclick="window.location.href='Curriculo Victor.pdf'" class="download_btn">Download CV</button>
+                            <button onclick="window.location.href='Curriculo Victor.pdf'" class="download_btn">Currículo Victor</button>
                         </div>                                        
                     </div>
                 </div>
@@ -176,10 +175,10 @@
 
             <section class="about section" id="sobre">
                 <h2 class="section__title">Sobre Mim</h2>
-                <span class="section__subtitle">Introdução</span>
+                <span class="section__subtitle"></span>
 
                 <div class="about__container container grid">
-                    <img src="" alt="Imagem do Victor" class="my_img">
+                    <img src="img/img.jpg" alt="Imagem do Victor" class="about__img">
 
                     <div class="about__data">
                         <p class="about__description">Sou uma pessoa muito comunicativa e adoro trabalhar em equipe, acredito que juntos conseguimos alcançar coisas incríveis! 
