--- a/index.html
+++ b/index.html
@@ -162,8 +162,10 @@
                     </div>
                 </div>
                 <div class="img_section">
-                    <img src="img/img-victor.png" alt="My Image" class="my_img">
-                </div>
+                    <div class="img-container">
+                        <img src="img/img-victor.png" alt="My Image" class="my-img">
+                    </div>
+                </div>                
             </div>
         </div>
         <div class="red_circle"></div>
